# Computer-Science-12

./: README.md  Unit1.cpp  random  random.cpp
Termicord/: CMakeLists.txt  README.md  client.sh  http.sh  server.sh
Termicord/client/: CMakeLists.txt
Termicord/client/include/: auth.h  input.h  types.h
Termicord/client/include/utils/: input.h  utils.h
Termicord/client/include/windows/: auth.h  chat.h  home.h
Termicord/client/src/: auth.cpp  client.cpp  input.cpp  requests.cpp
Termicord/client/src/utils/: input.cpp  requests.cpp  utils.cpp
Termicord/client/src/windows/: auth.cpp  chat.cpp  home.cpp
Termicord/databases/: servers.json  users.json
Termicord/http/: CMakeLists.txt
Termicord/http/include/: routing.h  types.h  utils.h
Termicord/http/include/database/: database.h
Termicord/http/include/routes/: getUser.h  servers.h  users.h
Termicord/http/src/: http.cpp  routing.cpp  utils.cpp
Termicord/http/src/database/: database.cpp
Termicord/http/src/routes/: getUser.cpp  servers.cpp  users.cpp
Termicord/server/: CMakeLists.txt
Termicord/server/include/: proxy.h  servers.h  types.h
Termicord/server/src/: proxy.cpp  server.cpp  servers.cpp
Tic Tac Toe/: main  main.cpp  tasks.md
Unit 1/Lesson 1/: lesson1  lesson1.cpp
Unit 1/Lesson 2/: lesson2  lesson2.cpp
Unit 1/Lesson 3/: lesson3  lesson3.cpp
Unit 1/Lesson 4/: lesson4  lesson4.cpp
Unit 1/Lesson 5/: lesson5  lesson5.cpp
Unit 2/Lesson 1/: lesson1  lesson1.cpp
Unit 2/Lesson 2/: lesson2  lesson2.cpp
Unit 2/Lesson 3/: lesson3  lesson3.cpp
Unit 2/Lesson 4/: lesson4  lesson4.cpp
Unit 2/Lesson 5/: lesson5  lesson5.cpp
Unit 3/Lesson 1/Part 1/: upper.cpp  upper.h
Unit 3/Lesson 1/Part 2/: main  main.cpp  math.cpp  math.h
Unit 3/Lesson 2/Part 1/: main  main.cpp  util.cpp
Unit 3/Lesson 2/Part 2/: main  main.cpp
Unit 4/Lesson 1/Part 1/: main  main.cpp  util.h
Unit 4/Lesson 1/Part 2/: main  main.cpp
Unit 4/Lesson 2/Part 1/: main  main.cpp
Unit 5/Lesson 1/: main  main.cpp
Unit 5/Lesson 2/: main  main.cpp
Unit 6/Lesson 1/: main  main.cpp
(+57 files in other folders)
